fix logo margin on mobile

--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -104,3 +104,6 @@
 .logo:hover{
 	fill: $brand-secondary;
 }
+.logoMobile{
+	margin: 4px 0 0 8px; 
+}
